--- a/angular/src/app/theme/layout/admin/nav-bar/nav-left/nav-left.component.html
+++ b/angular/src/app/theme/layout/admin/nav-bar/nav-left/nav-left.component.html
@@ -1,5 +1,5 @@
 <ul class="navbar-nav me-auto">
   <li class="nav-item">
-    <app-nav-search></app-nav-search>
+    <app-nav-search />
   </li>
 </ul>
