--- a/angular/src/app/theme/shared/components/spinner/spinner.component.html
+++ b/angular/src/app/theme/shared/components/spinner/spinner.component.html
@@ -2,9 +2,9 @@
   <div id="http-loader">
     <div class="loader-bg">
       <!-- material-line -->
-      @if (spinner === Spinkit.skLine) {
-        <div class="sk-line-material" [class.colored]="!backgroundColor">
-          <div class="sk-child sk-bounce1" [style.background-color]="backgroundColor"></div>
+      @if (spinner() === Spinkit.skLine) {
+        <div class="sk-line-material" [class.colored]="!backgroundColor()">
+          <div class="sk-child sk-bounce1" [style.background-color]="backgroundColor()"></div>
         </div>
       }
     </div>
