package upgrade and bug fix

--- a/bootstrap/src/assets/scss/settings/_color-variables.scss
+++ b/bootstrap/src/assets/scss/settings/_color-variables.scss
@@ -1,34 +1,31 @@
 // =======================================
 //   List of variables for Preset color
 // =======================================
-$brand-color1 : linear-gradient(to right,#4099ff,#73b4ff);
-$brand-color2 : linear-gradient(to right,#FF5370,#f48fb1);
-$brand-color3 : linear-gradient(to right,#4099ff,#6E7FF3);
-$brand-color4 : linear-gradient(to right,#38a9f9,#43e9b3);
-$brand-color5 : linear-gradient(to right,#3b4650,#647688);
-$brand-color6 : linear-gradient(to right,#ff784f,#ff5370);
-$brand-color7 : linear-gradient(to right,#11c788,#54e2b7);
-$brand-color8 : linear-gradient(to right,#ff5858,#f09819);
-$brand-color9 : linear-gradient(to right,#39ADB5,#7C4DFF);
-$brand-color10 : linear-gradient(to right,#473B7B,#30D2BE);
-$brand-color11 : linear-gradient(to right,#000000,#0fb3c2);
-$brand-color12 : linear-gradient(to right,#2d0102,#091991);
-
-
+$brand-color1: linear-gradient(to right, #4099ff, #73b4ff);
+$brand-color2: linear-gradient(to right, #ff5370, #f48fb1);
+$brand-color3: linear-gradient(to right, #4099ff, #6e7ff3);
+$brand-color4: linear-gradient(to right, #38a9f9, #43e9b3);
+$brand-color5: linear-gradient(to right, #3b4650, #647688);
+$brand-color6: linear-gradient(to right, #ff784f, #ff5370);
+$brand-color7: linear-gradient(to right, #11c788, #54e2b7);
+$brand-color8: linear-gradient(to right, #ff5858, #f09819);
+$brand-color9: linear-gradient(to right, #39adb5, #7c4dff);
+$brand-color10: linear-gradient(to right, #473b7b, #30d2be);
+$brand-color11: linear-gradient(to right, #000000, #0fb3c2);
+$brand-color12: linear-gradient(to right, #2d0102, #091991);
 
 // Gray color
 $white: #ffffff;
-$gray-100: #F8F9FA;
-$gray-200: #F3F5F7;
-$gray-300: #DBE0E5;
-$gray-400: #BEC8D0;
-$gray-500: #8996A4;
-$gray-600: #5B6B79;
-$gray-700: #3E4853;
-$gray-800: #1D2630;
+$gray-100: #f8f9fa;
+$gray-200: #f3f5f7;
+$gray-300: #dbe0e5;
+$gray-400: #bec8d0;
+$gray-500: #8996a4;
+$gray-600: #5b6b79;
+$gray-700: #3e4853;
+$gray-800: #1d2630;
 $gray-900: #131920;
 $black: #000000;
-
 
 $blue: #4099ff;
 $indigo: #6610f2;
