--- a/bootstrap/src/assets/scss/style-preset.scss
+++ b/bootstrap/src/assets/scss/style-preset.scss
@@ -8,18 +8,17 @@ File: style.css
 =================================================================================== */
 
 // main framework
-@import "settings/color-variables";
-@import "node_modules/bootstrap/scss/functions";
-@import "node_modules/bootstrap/scss/variables";
-@import "settings/bootstrap-variables";
-@import "settings/theme-variables";
+@import 'settings/color-variables';
+@import 'node_modules/bootstrap/scss/functions';
+@import 'node_modules/bootstrap/scss/variables';
+@import 'settings/bootstrap-variables';
+@import 'settings/theme-variables';
 
-@import "node_modules/bootstrap/scss/mixins";
+@import 'node_modules/bootstrap/scss/mixins';
 
-@each $name,
-$value in $preset-colors {
-  [data-pc-preset="#{$name}"] {
-    $pc-primary: map-get($value, "primary");
+@each $name, $value in $preset-colors {
+  [data-pc-preset='#{$name}'] {
+    $pc-primary: map-get($value, 'primary');
     $color-rgb: to-rgb($pc-primary);
     $pc-primary-light: tint-color($pc-primary, 90%);
     --pc-sidebar-active-color: #{$pc-primary};
@@ -29,7 +28,7 @@ $value in $preset-colors {
     --bs-primary-light: #{$pc-primary-light};
     --bs-link-color: #{$pc-primary};
     --bs-link-color-rgb: #{$color-rgb};
-    --bs-link-hover-color : #{shift-color($pc-primary, $link-shade-percentage)};
+    --bs-link-hover-color: #{shift-color($pc-primary, $link-shade-percentage)};
     --bs-link-hover-color-rgb: to-rgb(shift-color($pc-primary, $link-shade-percentage));
 
     --dt-row-selected: #{to-rgb($pc-primary)};
@@ -39,18 +38,21 @@ $value in $preset-colors {
       color: $pc-primary;
     }
     .bg-grd-primary {
-      background: linear-gradient( 45deg, $pc-primary,lighten($pc-primary, 10%));
+      background: linear-gradient(45deg, $pc-primary, lighten($pc-primary, 10%));
     }
 
     .link-primary {
-      $value : map-get($value, "primary");
+      $value: map-get($value, 'primary');
       color: $value !important; // stylelint-disable-line declaration-no-important
 
       @if $link-shade-percentage !=0 {
-
         &:hover,
         &:focus {
-          color: if(color-contrast($value)==$color-contrast-light, shade-color($value, $link-shade-percentage), tint-color($value, $link-shade-percentage)) !important; // stylelint-disable-line declaration-no-important
+          color: if(
+            color-contrast($value) ==$color-contrast-light,
+            shade-color($value, $link-shade-percentage),
+            tint-color($value, $link-shade-percentage)
+          ) !important; // stylelint-disable-line declaration-no-important
         }
       }
     }
@@ -76,8 +78,10 @@ $value in $preset-colors {
       --#{$prefix}accordion-btn-focus-box-shadow: 0 0 0 #{$input-btn-focus-width} #{rgba($pc-primary, $input-btn-focus-color-opacity)};
       --#{$prefix}accordion-active-color: #{$pc-primary};
       --#{$prefix}accordion-active-bg: #{$pc-primary-light};
-      --#{$prefix}accordion-btn-active-icon: #{escape-svg(url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='#{$pc-primary}'><path fill-rule=' evenodd' d=' M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>"))};
- // scss-docs-end accordion-css-vars
+      --#{$prefix}accordion-btn-active-icon: #{escape-svg(
+          url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='#{$pc-primary}'><path fill-rule=' evenodd' d=' M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>")
+        )};
+      // scss-docs-end accordion-css-vars
     }
 
     .alert-primary {
@@ -136,11 +140,15 @@ $value in $preset-colors {
             background-color: shift-color($pc-primary, $soft-bg-level);
 
             &[type='checkbox'] {
-              background-image: escape-svg(url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'><path fill='none' stroke='#{$pc-primary}' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10l3 3l6-6'/></svg>"));
+              background-image: escape-svg(
+                url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'><path fill='none' stroke='#{$pc-primary}' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10l3 3l6-6'/></svg>")
+              );
             }
 
             &[type='radio'] {
-              background-image: escape-svg(url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'><circle r='2' fill='#{$pc-primary}'/></svg>"));
+              background-image: escape-svg(
+                url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'><circle r='2' fill='#{$pc-primary}'/></svg>")
+              );
             }
           }
         }
@@ -148,7 +156,6 @@ $value in $preset-colors {
         &.input-primary,
         &.input-light-primary {
           &:focus {
-
             &[type='checkbox'],
             &[type='radio'] {
               box-shadow: 0 0 0 0.2rem rgba($pc-primary, 0.25);
@@ -161,7 +168,9 @@ $value in $preset-colors {
       &.form-switch {
         .form-check-input.input-light-primary {
           &:checked {
-            background-image: escape-svg(url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'><circle r='3' fill='#{$pc-primary}'/></svg>"));
+            background-image: escape-svg(
+              url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'><circle r='3' fill='#{$pc-primary}'/></svg>")
+            );
           }
         }
       }
@@ -191,7 +200,7 @@ $value in $preset-colors {
 
       &:not(:disabled):not(.disabled).active,
       &:not(:disabled):not(.disabled):active,
-      .show>&.dropdown-toggle {
+      .show > &.dropdown-toggle {
         background: $pc-primary;
         color: #fff;
         border-color: $pc-primary;
@@ -200,7 +209,7 @@ $value in $preset-colors {
 
     .btn-check:active,
     .btn-check:checked {
-      +.btn-light-primary {
+      + .btn-light-primary {
         background: $pc-primary;
         color: #fff;
         border-color: $pc-primary;
@@ -231,7 +240,7 @@ $value in $preset-colors {
 
       &:not(:disabled):not(.disabled).active,
       &:not(:disabled):not(.disabled):active,
-      .show>&.dropdown-toggle {
+      .show > &.dropdown-toggle {
         background: $pc-primary-light;
         color: $pc-primary;
         border-color: $pc-primary-light;
@@ -240,7 +249,7 @@ $value in $preset-colors {
 
     .btn-check:active,
     .btn-check:checked {
-      +.btn-link-primary {
+      + .btn-link-primary {
         background: $pc-primary-light;
         color: $pc-primary;
         border-color: $pc-primary-light;
@@ -265,13 +274,15 @@ $value in $preset-colors {
       }
 
       &:focus {
-        box-shadow: 0 0 0 1px #fff, 0 0 0 3px transparentize($pc-primary, 0.71);
+        box-shadow:
+          0 0 0 1px #fff,
+          0 0 0 3px transparentize($pc-primary, 0.71);
       }
     }
     .swal-content__input:focus {
       border-color: transparentize($pc-primary, 0.71);
     }
-    
+
     .swal-content__textarea {
       &:focus {
         border-color: transparentize($pc-primary, 0.71);
@@ -279,7 +290,9 @@ $value in $preset-colors {
     }
     .swal2-styled {
       &:focus {
-        box-shadow: 0 0 0 1px #fff, 0 0 0 3px rgba($pc-primary, 0.4) !important;
+        box-shadow:
+          0 0 0 1px #fff,
+          0 0 0 3px rgba($pc-primary, 0.4) !important;
       }
     }
     .slider-tick {
@@ -293,10 +306,9 @@ $value in $preset-colors {
 }
 
 $i: 1;
-@each $name,
-$value in $brand-colors {
-  [data-pc-header="header-#{$i}"]{
-    --pc-header-background : #{$value};
+@each $name, $value in $brand-colors {
+  [data-pc-header='header-#{$i}'] {
+    --pc-header-background: #{$value};
   }
   $i: $i + 1;
 }
