--- a/bootstrap/src/assets/scss/themes/layouts/_pc-sidebar.scss
+++ b/bootstrap/src/assets/scss/themes/layouts/_pc-sidebar.scss
@@ -29,8 +29,8 @@
     text-transform: lowercase;
     position: relative;
     line-height: 1.34;
-    &:after{
-      content: "";
+    &:after {
+      content: '';
       position: absolute;
       left: 0;
       top: 8px;
