--- a/bootstrap/src/assets/scss/landing.scss
+++ b/bootstrap/src/assets/scss/landing.scss
@@ -51,7 +51,7 @@ section {
 
   .nav-link {
     font-weight: 500;
-    color: rgba(255, 255, 255, .9);
+    color: rgba(255, 255, 255, 0.9);
 
     &:active,
     &:hover,
@@ -77,7 +77,7 @@ header {
 
   @media (max-width: 767.98px) {
     padding: 130px 0 60px 0;
-    .header-content{
+    .header-content {
       text-align: center;
       margin-bottom: 30px;
     }
