--- a/bootstrap/src/assets/scss/settings/_bootstrap-variables.scss
+++ b/bootstrap/src/assets/scss/settings/_bootstrap-variables.scss
@@ -38,13 +38,13 @@ $colors: (
 );
 // scss-docs-end colors-map
 
-$primary: $blue; 
-$secondary: $secondary; 
-$success: $green; 
-$info: $cyan; 
-$warning: $yellow; 
-$danger: $red; 
-$light: $gray-100; 
+$primary: $blue;
+$secondary: $secondary;
+$success: $green;
+$info: $cyan;
+$warning: $yellow;
+$danger: $red;
+$light: $gray-100;
 
 // scss-docs-start theme-colors-map
 $theme-colors: (
@@ -193,13 +193,7 @@ $cyans: (
 // fusv-enable
 
 // Characters which are escaped by the escape-svg function
-$escaped-characters: (
-  ('<', '%3c'),
-  ('>', '%3e'),
-  ('#', '%23'),
-  ('(', '%28'),
-  (')', '%29')
-);
+$escaped-characters: (('<', '%3c'), ('>', '%3e'), ('#', '%23'), ('(', '%28'), (')', '%29'));
 
 // Options
 //
@@ -272,8 +266,8 @@ body {
   font-feature-settings: 'salt';
 }
 
-$body-bg: #f6f7fb; 
-$body-color: #222; 
+$body-bg: #f6f7fb;
+$body-color: #222;
 $body-text-align: null;
 
 // Links
@@ -429,12 +423,12 @@ $line-height-base: 1.5;
 $line-height-sm: 1.25;
 $line-height-lg: 2;
 
-$h1-font-size: 40px; 
-$h2-font-size: 32px; 
-$h3-font-size: 28px; 
-$h4-font-size: 22px; 
-$h5-font-size: 20px; 
-$h6-font-size: 14px; 
+$h1-font-size: 40px;
+$h2-font-size: 32px;
+$h3-font-size: 28px;
+$h4-font-size: 22px;
+$h5-font-size: 20px;
+$h6-font-size: 14px;
 
 // scss-docs-start font-sizes
 $font-sizes: (
@@ -452,7 +446,7 @@ $headings-font-family: null;
 $headings-font-style: null;
 $headings-font-weight: 600;
 $headings-line-height: 1.2;
-$headings-color: #29344A;
+$headings-color: #29344a;
 $label-color: $gray-900;
 
 // scss-docs-start display-headings
@@ -476,7 +470,7 @@ $small-font-size: 80%;
 
 $sub-sup-font-size: 0.75em;
 
-$text-muted: #5B6B79;
+$text-muted: #5b6b79;
 
 $initialism-font-size: $small-font-size;
 $blockquote-margin-y: $spacer;
@@ -608,7 +602,9 @@ $btn-font-size-lg: $input-btn-font-size-lg;
 $btn-border-width: $input-btn-border-width;
 
 $btn-font-weight: 500;
-$btn-box-shadow: inset 0 1px 0 rgba($white, 0.15), 0 1px 1px rgba($black, 0.075);
+$btn-box-shadow:
+  inset 0 1px 0 rgba($white, 0.15),
+  0 1px 1px rgba($black, 0.075);
 $btn-focus-width: $input-btn-focus-width;
 $btn-focus-box-shadow: $input-btn-focus-box-shadow;
 $btn-disabled-opacity: 0.65;
@@ -623,7 +619,11 @@ $btn-border-radius: 2px;
 $btn-border-radius-sm: 2px;
 $btn-border-radius-lg: 6px;
 
-$btn-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+$btn-transition:
+  color 0.15s ease-in-out,
+  background-color 0.15s ease-in-out,
+  border-color 0.15s ease-in-out,
+  box-shadow 0.15s ease-in-out;
 
 $btn-hover-bg-shade-amount: 15%;
 $btn-hover-bg-tint-amount: 15%;
@@ -697,7 +697,9 @@ $input-height: add($input-line-height * 1em, add($input-padding-y * 2, $input-he
 $input-height-sm: add($input-line-height * 1em, add($input-padding-y-sm * 2, $input-height-border, false));
 $input-height-lg: add($input-line-height * 1em, add($input-padding-y-lg * 2, $input-height-border, false));
 
-$input-transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+$input-transition:
+  border-color 0.15s ease-in-out,
+  box-shadow 0.15s ease-in-out;
 
 $form-color-width: 3rem;
 // scss-docs-end form-input-variables
@@ -708,7 +710,10 @@ $form-check-padding-start: $form-check-input-width + 0.5em;
 $form-check-margin-bottom: 0.125rem;
 $form-check-label-color: null;
 $form-check-label-cursor: null;
-$form-check-transition: background-color 0.15s ease-in-out, background-position 0.15s ease-in-out, border-color 0.15s ease-in-out,
+$form-check-transition:
+  background-color 0.15s ease-in-out,
+  background-position 0.15s ease-in-out,
+  border-color 0.15s ease-in-out,
   box-shadow 0.15s ease-in-out;
 
 $form-check-input-active-filter: brightness(90%);
@@ -772,8 +777,10 @@ $form-select-bg-size: 16px 12px; // In pixels because image dimensions
 $form-select-indicator-color: $gray-800;
 $form-select-indicator: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><path fill='none' stroke='#{$form-select-indicator-color}' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/></svg>");
 
-$form-select-feedback-icon-padding-end: add(1em * 0.75,
-    (2 * $form-select-padding-y * 0.75) + $form-select-padding-x + $form-select-indicator-padding);
+$form-select-feedback-icon-padding-end: add(
+  1em * 0.75,
+  (2 * $form-select-padding-y * 0.75) + $form-select-padding-x + $form-select-indicator-padding
+);
 $form-select-feedback-icon-position: center right ($form-select-padding-x + $form-select-indicator-padding);
 $form-select-feedback-icon-size: $input-height-inner-half $input-height-inner-half;
 
@@ -813,11 +820,16 @@ $form-range-thumb-bg: $component-active-bg;
 $form-range-thumb-border: 0;
 $form-range-thumb-border-radius: 1rem;
 $form-range-thumb-box-shadow: 0 0.1rem 0.25rem rgba($black, 0.1);
-$form-range-thumb-focus-box-shadow: 0 0 0 1px $body-bg, $input-focus-box-shadow;
+$form-range-thumb-focus-box-shadow:
+  0 0 0 1px $body-bg,
+  $input-focus-box-shadow;
 $form-range-thumb-focus-box-shadow-width: $input-focus-width; // For focus box shadow issue in Edge
 $form-range-thumb-active-bg: rgba(#{var(--bs-primary-rgb)}, 0.8);
 $form-range-thumb-disabled-bg: $gray-500;
-$form-range-thumb-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+$form-range-thumb-transition:
+  background-color 0.15s ease-in-out,
+  border-color 0.15s ease-in-out,
+  box-shadow 0.15s ease-in-out;
 
 $form-file-button-color: $input-color;
 $form-file-button-bg: $input-group-addon-bg;
@@ -848,10 +860,14 @@ $form-feedback-icon-invalid: url("data:image/svg+xml,<svg xmlns='http://www.w3.o
 
 // scss-docs-start form-validation-states
 $form-validation-states: (
-  'valid': ('color': $form-feedback-valid-color,
-    'icon': $form-feedback-icon-valid ),
-  'invalid': ('color': $form-feedback-invalid-color,
-    'icon': $form-feedback-icon-invalid )
+  'valid': (
+    'color': $form-feedback-valid-color,
+    'icon': $form-feedback-icon-valid
+  ),
+  'invalid': (
+    'color': $form-feedback-invalid-color,
+    'icon': $form-feedback-icon-invalid
+  )
 );
 // scss-docs-end form-validation-states
 
@@ -882,7 +898,10 @@ $nav-link-font-size: null;
 $nav-link-font-weight: null;
 $nav-link-color: var(--#{$prefix}link-color);
 $nav-link-hover-color: var(--#{$prefix}link-hover-color);
-$nav-link-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
+$nav-link-transition:
+  color 0.15s ease-in-out,
+  background-color 0.15s ease-in-out,
+  border-color 0.15s ease-in-out;
 $nav-link-disabled-color: $gray-600;
 
 $nav-tabs-border-color: var(--bs-border-color);
@@ -1007,9 +1026,7 @@ $pagination-color: var(--#{$prefix}link-color);
 $pagination-bg: $white;
 $pagination-border-radius: $border-radius;
 $pagination-border-width: $border-width;
-$pagination-margin-start: (
-  $pagination-border-width * -1
-);
+$pagination-margin-start: ($pagination-border-width * -1);
 $pagination-border-color: $gray-300;
 
 $pagination-focus-color: var(--#{$prefix}link-hover-color);
@@ -1029,7 +1046,10 @@ $pagination-disabled-color: $gray-600;
 $pagination-disabled-bg: $white;
 $pagination-disabled-border-color: $gray-300;
 
-$pagination-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,
+$pagination-transition:
+  color 0.15s ease-in-out,
+  background-color 0.15s ease-in-out,
+  border-color 0.15s ease-in-out,
   box-shadow 0.15s ease-in-out;
 
 $pagination-border-radius-sm: $border-radius-sm;
@@ -1044,13 +1064,13 @@ $placeholder-opacity-min: 0.2;
 // scss-docs-end placeholders
 
 // Cards
-$card-spacer-y: 25px; 
-$card-spacer-x: 25px; 
+$card-spacer-y: 25px;
+$card-spacer-x: 25px;
 $card-title-spacer-y: calc($spacer / 2);
-$card-border-width: 0px; 
+$card-border-width: 0px;
 $card-border-radius: 5px;
 $card-border-color: $border-color;
-$card-box-shadow: 0 1px 2.94px 0.06px rgba(4,26,55,.16);
+$card-box-shadow: 0 1px 2.94px 0.06px rgba(4, 26, 55, 0.16);
 $card-inner-border-radius: calc(#{$card-border-radius} - #{$card-border-width});
 $card-cap-padding-y: 25px;
 $card-cap-padding-x: 25px;
@@ -1081,7 +1101,9 @@ $accordion-button-padding-y: $accordion-padding-y;
 $accordion-button-padding-x: $accordion-padding-x;
 $accordion-button-color: $accordion-color;
 $accordion-button-bg: var(--#{$prefix}accordion-bg);
-$accordion-transition: $btn-transition, border-radius 0.15s ease;
+$accordion-transition:
+  $btn-transition,
+  border-radius 0.15s ease;
 $accordion-button-active-bg: tint-color($primary, 90%);
 $accordion-button-active-color: shade-color($primary, 10%);
 
@@ -1179,7 +1201,7 @@ $badge-border-radius: 6px;
 // Modals
 
 // Padding applied to the modal body
-$modal-inner-padding: 1.25rem; 
+$modal-inner-padding: 1.25rem;
 
 // Margin between elements in footer, must be lower than or equal to 2 * $modal-inner-padding
 $modal-footer-margin-between: 0.5rem;
@@ -1203,9 +1225,9 @@ $modal-header-border-color: $border-color;
 $modal-footer-border-color: $modal-header-border-color;
 $modal-header-border-width: $modal-content-border-width;
 $modal-footer-border-width: $modal-header-border-width;
-$modal-header-padding-y: 1.25rem; 
-$modal-header-padding-x: 1.5625rem; 
-$modal-header-padding: $modal-header-padding-y $modal-header-padding-x; 
+$modal-header-padding-y: 1.25rem;
+$modal-header-padding-x: 1.5625rem;
+$modal-header-padding: $modal-header-padding-y $modal-header-padding-x;
 
 $modal-footer-bg: null;
 $modal-footer-border-color: $modal-header-border-color;
@@ -1242,11 +1264,11 @@ $alert-dismissible-padding-r: $alert-padding-x * 3; // 3x covers width of x plus
 
 $progress-height: 1rem;
 $progress-font-size: $font-size-base * 0.75;
-$progress-bg: $body-bg; 
+$progress-bg: $body-bg;
 $progress-border-radius: $border-radius;
 $progress-box-shadow: inset 0 0.1rem 0.1rem rgba($black, 0.1);
 $progress-bar-color: $white;
-$progress-bar-bg: $primary; 
+$progress-bar-bg: $primary;
 $progress-bar-animation-timing: 1s linear infinite;
 $progress-bar-transition: width 0.6s ease;
 
