--- a/bootstrap/src/assets/scss/themes/components/_form.scss
+++ b/bootstrap/src/assets/scss/themes/components/_form.scss
@@ -34,7 +34,8 @@ select.form-control,
 
 select.form-control {
   appearance: none;
-  background: #{$input-bg} url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' stroke='currentColor' stroke-width='2' fill='none' stroke-linecap='round' stroke-linejoin='round' class='css-i6dzq1'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E") no-repeat right 0.75rem center/18px 25px;
+  background: #{$input-bg} url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' stroke='currentColor' stroke-width='2' fill='none' stroke-linecap='round' stroke-linejoin='round' class='css-i6dzq1'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E")
+    no-repeat right 0.75rem center/18px 25px;
 
   &[data-multiselectsplitter-firstselect-selector],
   &[data-multiselectsplitter-secondselect-selector] {
@@ -43,34 +44,33 @@ select.form-control {
 }
 
 .form-floating {
-  >label {
+  > label {
     top: 1px;
   }
 
-  >.form-control:focus,
-  >.form-control:not(:placeholder-shown),
-  >.form-select {
-    ~label {
+  > .form-control:focus,
+  > .form-control:not(:placeholder-shown),
+  > .form-select {
+    ~ label {
       color: $gray-600;
     }
   }
 
-  >.form-control:focus {
-    ~label {
+  > .form-control:focus {
+    ~ label {
       color: $component-active-bg;
     }
   }
 
-  >input {
+  > input {
     color: $body-color;
   }
 }
 
 .bootstrap-select -select {
-
-  >.dropdown-toggle.btn-light,
-  >.dropdown-toggle.btn-secondary,
-  >.dropdown-toggle.btn-default {
+  > .dropdown-toggle.btn-light,
+  > .dropdown-toggle.btn-secondary,
+  > .dropdown-toggle.btn-default {
     border-color: $input-border-color !important;
     box-shadow: none;
     background: $input-bg !important;
@@ -127,8 +127,7 @@ select.form-control {
   }
 }
 
-@each $color,
-$value in $theme-colors {
+@each $color, $value in $theme-colors {
   .form-check {
     .form-check-input {
       &.input-#{$color} {
@@ -144,11 +143,15 @@ $value in $theme-colors {
           background-color: shift-color($value, $soft-bg-level);
 
           &[type='checkbox'] {
-            background-image: escape-svg(url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'><path fill='none' stroke='#{$value}' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10l3 3l6-6'/></svg>"));
+            background-image: escape-svg(
+              url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'><path fill='none' stroke='#{$value}' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10l3 3l6-6'/></svg>")
+            );
           }
 
           &[type='radio'] {
-            background-image: escape-svg(url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'><circle r='2' fill='#{$value}'/></svg>"));
+            background-image: escape-svg(
+              url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'><circle r='2' fill='#{$value}'/></svg>")
+            );
           }
         }
       }
@@ -156,7 +159,6 @@ $value in $theme-colors {
       &.input-#{$color},
       &.input-light-#{$color} {
         &:focus {
-
           &[type='checkbox'],
           &[type='radio'] {
             box-shadow: 0 0 0 0.2rem rgba($value, 0.25);
@@ -169,19 +171,21 @@ $value in $theme-colors {
     &.form-switch {
       .form-check-input.input-light-#{$color} {
         &:checked {
-          background-image: escape-svg(url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'><circle r='3' fill='#{$value}'/></svg>"));
+          background-image: escape-svg(
+            url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'><circle r='3' fill='#{$value}'/></svg>")
+          );
         }
       }
     }
   }
 }
 
-.input-group>.input-group-append:last-child>.btn:not(:last-child):not(.dropdown-toggle),
-.input-group>.input-group-append:last-child>.input-group-text:not(:last-child),
-.input-group>.input-group-append:not(:last-child)>.btn,
-.input-group>.input-group-append:not(:last-child)>.input-group-text,
-.input-group>.input-group-prepend>.btn,
-.input-group>.input-group-prepend>.input-group-text {
+.input-group > .input-group-append:last-child > .btn:not(:last-child):not(.dropdown-toggle),
+.input-group > .input-group-append:last-child > .input-group-text:not(:last-child),
+.input-group > .input-group-append:not(:last-child) > .btn,
+.input-group > .input-group-append:not(:last-child) > .input-group-text,
+.input-group > .input-group-prepend > .btn,
+.input-group > .input-group-prepend > .input-group-text {
   border-right: none;
 }
 
@@ -193,13 +197,13 @@ $value in $theme-colors {
     margin-bottom: 1rem;
   }
 
-  .form-label-group>input,
-  .form-label-group>label {
+  .form-label-group > input,
+  .form-label-group > label {
     height: 3.125rem;
     padding: 0.75rem;
   }
 
-  .form-label-group>label {
+  .form-label-group > label {
     position: absolute;
     top: 0;
     left: 0;
@@ -239,14 +243,14 @@ $value in $theme-colors {
     padding-bottom: 0.25rem;
   }
 
-  .form-label-group input:not(:-moz-placeholder-shown)~label {
+  .form-label-group input:not(:-moz-placeholder-shown) ~ label {
     padding-top: 0.25rem;
     padding-bottom: 0.25rem;
     font-size: 12px;
     color: #777;
   }
 
-  .form-label-group input:not(:placeholder-shown)~label {
+  .form-label-group input:not(:placeholder-shown) ~ label {
     padding-top: 0.25rem;
     padding-bottom: 0.25rem;
     font-size: 12px;
@@ -313,7 +317,7 @@ $value in $theme-colors {
   }
 
   tbody {
-    tr>td {
+    tr > td {
       &.day {
         color: $body-color;
 
@@ -384,8 +388,7 @@ $value in $theme-colors {
   }
 
   tfoot {
-    tr>th {
-
+    tr > th {
       &.clear,
       &.today {
         font-weight: 500;
@@ -414,7 +417,7 @@ $value in $theme-colors {
   }
 
   table td {
-    >a {
+    > a {
       border: 0;
 
       i {
@@ -425,7 +428,6 @@ $value in $theme-colors {
 }
 
 .bootstrap-timepicker-widget {
-
   .bootstrap-timepicker-hour,
   .bootstrap-timepicker-meridian,
   .bootstrap-timepicker-minute,
@@ -433,7 +435,7 @@ $value in $theme-colors {
     color: $headings-color;
   }
 
-  table td>a {
+  table td > a {
     &:hover {
       background: $body-bg;
     }
@@ -449,8 +451,7 @@ $value in $theme-colors {
   --tag-remove-bg: #{transparentize($danger, 0.7)};
   --tag-remove-btn-bg--hover: #{$danger};
 
-  @each $color,
-  $value in $theme-colors {
+  @each $color, $value in $theme-colors {
     &.tagify__tag--#{$color} {
       --tag-bg: #{transparentize($value, 0.8)};
 
@@ -475,8 +476,7 @@ $value in $theme-colors {
       background: $body-bg;
     }
 
-    @each $color,
-    $value in $theme-colors {
+    @each $color, $value in $theme-colors {
       &.bootstrap-switch-#{$color} {
         color: #fff;
         background: $value;
@@ -489,7 +489,7 @@ $value in $theme-colors {
 // bootstrap-select start
 
 .bootstrap-select {
-  >.dropdown-toggle.bs-placeholder.btn[class*='btn-']:not(.btn-light) {
+  > .dropdown-toggle.bs-placeholder.btn[class*='btn-']:not(.btn-light) {
     color: #fff;
   }
 }
@@ -577,8 +577,7 @@ $value in $theme-colors {
   }
 
   // State colors
-  @each $color,
-  $value in $theme-colors {
+  @each $color, $value in $theme-colors {
     &.dropzone-#{$color} {
       border-color: $value;
     }
@@ -602,7 +601,6 @@ $value in $theme-colors {
   }
 
   .dropzone-panel {
-
     .dropzone-remove-all,
     .dropzone-upload {
       display: none;
@@ -747,7 +745,6 @@ $value in $theme-colors {
     h3 {
       margin-top: 0;
     }
-
   }
 
   header.ck-content {
@@ -758,7 +755,7 @@ $value in $theme-colors {
         margin-top: 0;
       }
 
-      &+h3 {
+      & + h3 {
         margin-top: 0;
 
         font: {
@@ -806,7 +803,7 @@ $value in $theme-colors {
 
     .demo-row {
       flex-direction: column;
-      .demo-row__half{
+      .demo-row__half {
         width: 100%;
         padding-left: 0 !important;
         padding-right: 0 !important;
@@ -831,7 +828,9 @@ $value in $theme-colors {
       height: 20px;
       width: 35px;
       margin-left: -2.9em;
-      background-image: escape-svg(url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='4.1' fill='#{$form-switch-color}'/%3e%3c/svg%3e"));
+      background-image: escape-svg(
+        url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='4.1' fill='#{$form-switch-color}'/%3e%3c/svg%3e")
+      );
       transition: 0.35s cubic-bezier(0.54, 1.6, 0.5, 1);
 
       &[class*='input-light-'] {
@@ -844,15 +843,18 @@ $value in $theme-colors {
       }
 
       &:checked {
-        background-image: escape-svg(url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='4.1' fill='%23ffffff'/%3e%3c/svg%3e"));
+        background-image: escape-svg(
+          url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='4.1' fill='%23ffffff'/%3e%3c/svg%3e")
+        );
       }
     }
 
-    @each $color,
-    $value in $theme-colors {
+    @each $color, $value in $theme-colors {
       .form-check-input.input-light-#{$color} {
         &:checked {
-          background-image: escape-svg(url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='4.1' fill='#{$value}'/%3e%3c/svg%3e"));
+          background-image: escape-svg(
+            url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='4.1' fill='#{$value}'/%3e%3c/svg%3e")
+          );
         }
       }
     }
@@ -875,13 +877,17 @@ $value in $theme-colors {
       height: 19px;
       width: 19px;
       border-radius: 0.7rem;
-      box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1), 0 4px 0 0 rgba(0, 0, 0, 0.04), 0 4px 9px rgba(0, 0, 0, 0.13), 0 3px 3px rgba(0, 0, 0, 0.05);
+      box-shadow:
+        0 0 0 1px rgba(0, 0, 0, 0.1),
+        0 4px 0 0 rgba(0, 0, 0, 0.04),
+        0 4px 9px rgba(0, 0, 0, 0.13),
+        0 3px 3px rgba(0, 0, 0, 0.05);
       transition: 0.35s cubic-bezier(0.54, 1.6, 0.5, 1);
     }
   }
 
   .custom-control-input {
-    &:checked~.custom-control-label::after {
+    &:checked ~ .custom-control-label::after {
       transform: translateX(0.95rem);
     }
   }
@@ -933,7 +939,6 @@ $choices-icon-cross-inverse: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjEi
   }
 
   &.is-disabled {
-
     .#{$choices-selector}__inner,
     .#{$choices-selector}__input {
       background-color: $choices-bg-color-disabled;
@@ -1298,7 +1303,7 @@ $choices-icon-cross-inverse: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjEi
 .typeahead {
   position: relative;
 
-  &>ul {
+  & > ul {
     background-color: #ffffff;
     border-radius: 4px;
     border: 1px solid rgba(0, 0, 0, 0.1);
@@ -1316,8 +1321,8 @@ $choices-icon-cross-inverse: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjEi
     top: 100%;
     z-index: 1000;
 
-    >li {
-      >a {
+    > li {
+      > a {
         clear: both;
         color: #333;
         cursor: default;
@@ -1328,9 +1333,9 @@ $choices-icon-cross-inverse: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjEi
         white-space: nowrap;
       }
 
-      &.active>a:hover,
-      &.active>a,
-      >a:hover {
+      &.active > a:hover,
+      &.active > a,
+      > a:hover {
         background-color: var(--bs-primary);
         color: #fff !important;
         text-decoration: none;
@@ -1352,7 +1357,7 @@ $choices-icon-cross-inverse: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjEi
 .flatpickr-input[readonly] {
   background: $input-bg;
 }
-.noUi-target{
+.noUi-target {
   @include media-breakpoint-down(sm) {
     margin: 0 15px;
   }
@@ -1369,7 +1374,7 @@ $choices-icon-cross-inverse: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjEi
 .CodeMirror-fullscreen {
   z-index: 1099;
 }
-.flatpickr-calendar{
+.flatpickr-calendar {
   @include media-breakpoint-down(sm) {
     width: 270px;
   }
