--- a/bootstrap/src/html/layouts/topbar.html
+++ b/bootstrap/src/html/layouts/topbar.html
@@ -3,7 +3,7 @@
   <div class="m-header">
     <a href="../dashboard/index.html" class="b-brand text-primary">
       <!-- ========   Change your logo from here   ============ -->
-      <img src="../assets/images/logo-white.svg" alt="logo image" class="logo-lg">
+      <img src="../assets/images/logo-white.svg" alt="logo image" class="logo-lg" />
     </a>
   </div>
   <div class="header-wrapper"> @@include('./header-content.html') </div>
