--- a/angular/src/styles.scss
+++ b/angular/src/styles.scss
@@ -52,6 +52,7 @@ File: style.css
 @import 'scss/themes/component/component';
 
 // theme layouts
+@import 'scss/themes/layouts/pc-footer.scss';
 @import 'scss/themes/layouts/menu-lite';
 @import 'scss/themes/layouts/menu-ng';
 
