--- a/react/src/assets/scss/themes/layouts/_menu-lite.scss
+++ b/react/src/assets/scss/themes/layouts/_menu-lite.scss
@@ -1172,7 +1172,7 @@
 .pcoded-content {
   position: relative;
   display: block;
-  padding: 25px;
+  padding: 25px 25px 0px 25px;
 }
 
 .pcoded-main-container {
@@ -1372,7 +1372,7 @@
   }
 
   .pcoded-content {
-    padding: 25px 15px;
+    padding: 25px 15px 0px 15px;
   }
 
   .card {
