angular 20 amd code improvement and package upgrade

--- a/angular/src/app/demo/pages/authentication/sign-in/sign-in.component.html
+++ b/angular/src/app/demo/pages/authentication/sign-in/sign-in.component.html
@@ -29,7 +29,7 @@
             </p>
             <p class="mb-0 text-muted">
               Don’t have an account?
-              <a [routerLink]="['/auth/signup']" class="f-w-400">Signup</a>
+              <a [routerLink]="['/login']" class="f-w-400">Signup</a>
             </p>
           </div>
         </div>
