--- a/angular/src/app/demo/pages/authentication/sign-up/sign-up.component.html
+++ b/angular/src/app/demo/pages/authentication/sign-up/sign-up.component.html
@@ -33,7 +33,7 @@
             </div>
             <p class="mb-2">
               Already have an account?
-              <a [routerLink]="['/auth/signin']" class="f-w-400">Signin</a>
+              <a [routerLink]="['/register']" class="f-w-400">Signin</a>
             </p>
           </div>
         </div>
