--- a/angular/src/app/theme/layout/admin/admin.component.html
+++ b/angular/src/app/theme/layout/admin/admin.component.html
@@ -17,8 +17,8 @@
       <div class="pcoded-inner-content">
         <div class="main-body">
           <div class="page-wrapper">
-            <app-breadcrumb></app-breadcrumb>
-            <router-outlet></router-outlet>
+            <app-breadcrumb />
+            <router-outlet />
           </div>
         </div>
       </div>
