--- a/angular/src/app/theme/layout/admin/configuration/configuration.component.html
+++ b/angular/src/app/theme/layout/admin/configuration/configuration.component.html
@@ -2,9 +2,9 @@
   <a
     href="https://codedthemes.com/item/gradient-able-angular-admin-template/?utm_source=free_demo&utm_medium=codedthemes&utm_campaign=button_download_premium"
     target="_blank"
-    class="btn btn-md btn-primary has-ripple"
+    class="btn btn-md btn-danger has-ripple"
   >
-    <i aria-hidden="true" class="fa fa-shopping-cart"></i>
+    <i aria-hidden="true" class="fa fa-shopping-cart me-2"></i>
     Upgrade To Pro
   </a>
 </div>
