--- a/angular/src/scss/themes/_custom.scss
+++ b/angular/src/scss/themes/_custom.scss
@@ -42,7 +42,7 @@
   height: auto;
 }
 
-.pcoded-navbar.menu-light:not(.theme-horizontal) {
+.pcoded-navbar.menu-light {
   .pcoded-inner-navbar > app-nav-group > app-nav-collapse > li.active > a,
   .pcoded-inner-navbar > app-nav-group > app-nav-collapse > li.pcoded-trigger > a,
   .pcoded-inner-navbar > app-nav-group > app-nav-collapse > li:hover > a,
