--- a/angular/src/styles.scss
+++ b/angular/src/styles.scss
@@ -2,24 +2,10 @@
 
 /**======================================================================
 =========================================================================
-Template Name: Gradient Able Admin Template
-Author: Codedscss/themes
-supports: https://codedscss/themes.com/submit-ticket/
+Template Name: Gradient Able Angular Admin Template
+Author: CodedThemes
+Support: https://codedthemes.support-hub.io/
 File: style.css
-=========================================================================
-=========================================================================
-  == Table of Contents==
-	- Generic classes
-		-	Margin, Padding, Font class, text align, position, floating, overflow, background class, text color, display class, boarder class
-	- Theme Elements
-		-	Accordion, Button, tabs, typography, buttons, box shadow, Lable & Badges, Alert, Pagination, Breadcumb, Cards, Collapse,
-        -   Carousel, Grid, Progress, Model, tooltip, popover, Datepicker, Gridstack, lightbox, notification, Nestable, pnotify, rating,
-        -   Rangeslider, Slider, Syntax Highlighter, Tour, Treeview, Toolbar, Session Timeout, Session idle Timeout, offline, Animation
-    - Forms
-        -   Forms Elements, Advance Form Control, Validation, Masking, Wizard, Picker, Select
-	- Pages
-		-   authentication, Maintenance, Maps, Landing page messages, task, Todo, Notes, Charts, Icons, Gallery, Editors,
-        -   Invoice, Full Calender, File Upload,
 =================================================================================
 =================================================================================== */
 
