--- a/angular/src/app/theme/layout/admin/navigation/nav-content/nav-content.component.html
+++ b/angular/src/app/theme/layout/admin/navigation/nav-content/nav-content.component.html
@@ -1,32 +1,18 @@
 <ng-scrollbar (clickOutside)="navMob()" style="height: calc(100vh - 56px)">
   <div class="navbar-content">
     <ul class="nav pcoded-inner-navbar" (clickOutside)="fireOutClick()">
-      @for (item of navigations; track item) {
-        @if (item.type === 'group') {
-          <app-nav-group [item]="item"></app-nav-group>
-        }
-        @if (item.type === 'collapse') {
-          <app-nav-collapse [item]="item"></app-nav-collapse>
-        }
-        @if (item.type === 'item') {
-          <app-nav-item [item]="item"></app-nav-item>
+      @for (items of navigation; track items) {
+        @if (items.type === 'group') {
+          <app-nav-group [item]="items" />
         }
       }
     </ul>
-    <div class="card text-center">
-      <div class="card-body">
-        <img src="assets/images/sidebar.png" alt="images" class="img-fluid mb-2" />
-        <h5>Gradient Pro</h5>
-        <p>Checkout Gradient Premium Features</p>
-        <a
-          href="https://codedthemes.com/item/gradient-able-angular-admin-template/?utm_source=free_demo&utm_medium=codedthemes&utm_campaign=button_download_premium"
-          target="_blank"
-          class="btn text-white btn-primary"
-        >
-          Download Premium
-        </a>
-      </div>
-    </div>
+    <app-card [hidHeader]="true" cardClass="text-center">
+      <i class="feather icon-sunset f-40"></i>
+      <h6 class="mt-3">Help?</h6>
+      <p>Please contact us on our email for need any support</p>
+      <a href="https://codedthemes.support-hub.io/" target="_blank" class="btn btn-primary btn-sm text-white m-0">Support</a>
+    </app-card>
     <div class="version">
       <label disabled class="pe-auto">v{{ currentApplicationVersion }}</label>
     </div>
