--- a/angular/src/app/theme/layout/admin/navigation/nav-content/nav-group/nav-group.component.html
+++ b/angular/src/app/theme/layout/admin/navigation/nav-content/nav-group/nav-group.component.html
@@ -1,14 +1,13 @@
-<li class="nav-item pcoded-menu-caption">
-  <label>{{ item()?.title }}</label>
-</li>
-@for (item of item()?.children; track item) {
-  @if (item.type === 'group') {
-    <app-nav-group [item]="item"></app-nav-group>
-  }
-  @if (item.type === 'collapse') {
-    <app-nav-collapse [item]="item"></app-nav-collapse>
-  }
-  @if (item.type === 'item') {
-    <app-nav-item [item]="item"></app-nav-item>
+@if (!item().hidden) {
+  <li class="nav-item pcoded-menu-caption">
+    <label>{{ item().title }}</label>
+  </li>
+  @for (items of item().children; track items) {
+    @if (items.type === 'collapse') {
+      <app-nav-collapse [item]="items" />
+    }
+    @if (items.type === 'item') {
+      <app-nav-item [item]="items" />
+    }
   }
 }
