--- a/angular/src/app/theme/layout/admin/navigation/navigation.component.html
+++ b/angular/src/app/theme/layout/admin/navigation/navigation.component.html
@@ -1,3 +1,3 @@
 <div class="navbar-wrapper">
-  <app-nav-content (NavMobCollapse)="navMobCollapse()"></app-nav-content>
+  <app-nav-content (NavMobCollapse)="navMobCollapse()" />
 </div>
