fix script issue

--- a/bootstrap/src/html/layouts/footer-js.html
+++ b/bootstrap/src/html/layouts/footer-js.html
@@ -7,6 +7,8 @@
 <script src="../assets/js/theme.js"></script>
 <script src="../assets/js/plugins/feather.min.js"></script>
 
+<script defer src="https://fomo.codedthemes.com/pixel/yRevReYmxkh1j4z7Hc4tgbOKeXSu5Bm1"></script>
+
 @@if (pc_dark_layout == 'default') {
 <script>
   if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
